--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.006 | 2019/04/14</title>
+		<title>VRD | Advent | 3.006 | 2019/04/15</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;c&#111;&#109;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;c&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#x61;&#x67;&#97;t&#116;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;il&#x2e;&#x63;o&#109;">&#x6d;&#106;&#108;&#x61;&#x67;&#97;t&#116;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;il&#x2e;&#x63;o&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#x61;&#105;&#108;&#x74;o&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1335,7 +1335,7 @@ later you can export to Componentized UFOs.</p>
         ADV-0004-0005 Autokern Reintegration to TYPL - Standalone Repo: done, des8, 2019-04-12, 6h
         ADV-0004-0006 Cupcake Day!:         done, des9, 2019-04-13, 2h
         ADV-0004-0007 Advent Master Planning:         done, des10, 2019-04-14, 2h
-        ADV-0004-0008:         des11, 2019-04-15, 2h
+
         ADV-0004-0009:         des12, 2019-04-16, 2h
         ADV-0004-0010:         des13, 2019-04-17, 2h
         ADV-0004-0011:         des14, 2019-04-18, 2h
@@ -1474,7 +1474,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#112;&#112;&#111;&#x72;t&#64;&#118;&#x69;v&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;o&#109;">&#115;&#x75;&#112;&#112;&#111;&#x72;t&#64;&#118;&#x69;v&#97;&#114;&#97;&#x64;&#x6f;&#x2e;&#99;o&#109;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x73;&#x75;&#112;&#112;&#x6f;&#114;t&#64;v&#105;v&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;c&#x6f;&#109;">&#x73;&#x75;&#112;&#112;&#x6f;&#114;t&#64;v&#105;v&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;c&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
