--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.006 | 2019/04/15</title>
+		<title>VRD | Advent | 3.006 | 2019/04/19</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;c&#111;&#109;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;c&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#116;o&#58;s&#x75;&#x70;&#x70;o&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">s&#x75;&#x70;&#x70;o&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#x61;&#105;&#108;&#x74;o&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;&#97;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;m&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;">m&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1334,16 +1334,16 @@ later you can export to Componentized UFOs.</p>
 
         ADV-0004-0005 Autokern Reintegration to TYPL - Standalone Repo: done, des8, 2019-04-12, 6h
         ADV-0004-0006 Cupcake Day!:         done, des9, 2019-04-13, 2h
-        ADV-0004-0007 Advent Master Planning:         done, des10, 2019-04-14, 2h
+        ADV-0004-0007 Advent Master Planning:         des10, 2019-04-14, 2019-04-23
 
-        ADV-0004-0009:         des12, 2019-04-16, 2h
-        ADV-0004-0010:         des13, 2019-04-17, 2h
-        ADV-0004-0011:         des14, 2019-04-18, 2h
-        ADV-0004-0012:         des15, 2019-04-19, 2h
-        ADV-0004-0013:         des16, 2019-04-20, 2h
-        ADV-0004-0014:         des17, 2019-04-21, 2h
-        ADV-0004-0015:         des18, 2019-04-22, 2h
-        ADV-0004-0016:         des19, 2019-04-23, 2h
+        #ADV-0004-0009:         des12, 2019-04-16, 2h
+        #ADV-0004-0010:         des13, 2019-04-17, 2h
+        #ADV-0004-0011:         des14, 2019-04-18, 2h
+        #ADV-0004-0012:         des15, 2019-04-19, 2h
+        #ADV-0004-0013:         des16, 2019-04-20, 2h
+        #ADV-0004-0014:         des17, 2019-04-21, 2h
+        #ADV-0004-0015:         des18, 2019-04-22, 2h
+        #ADV-0004-0016:         des19, 2019-04-23, 2h
         ADV-0004-0017:         des20, 2019-04-24, 2h
         ADV-0004-0018:         des21, 2019-04-25, 2h
         ADV-0004-0019:         des22, 2019-04-26, 2h
@@ -1474,7 +1474,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#x73;&#x75;&#112;&#112;&#x6f;&#114;t&#64;v&#105;v&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;c&#x6f;&#109;">&#x73;&#x75;&#112;&#112;&#x6f;&#114;t&#64;v&#105;v&#x61;&#114;&#97;&#x64;&#x6f;&#x2e;c&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
