--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#116;o&#58;s&#x75;&#x70;&#x70;o&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">s&#x75;&#x70;&#x70;o&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;i&#108;&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;t&#x40;&#118;i&#118;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;t&#x40;&#118;i&#118;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;m&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;">m&#106;&#108;&#x61;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;m&#106;l&#x61;&#x67;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">m&#106;l&#x61;&#x67;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#x40;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1474,7 +1474,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;i&#108;&#x74;&#111;:&#115;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#46;c&#111;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#46;c&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
