--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#x40;&#118;&#x69;&#118;&#97;&#114;&#x61;&#100;&#111;&#46;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#99;&#111;m">&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#99;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;o&#58;&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;o&#109;">&#x6d;&#106;&#108;&#x61;&#103;&#x61;t&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;o&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#105;l&#x74;&#x6f;&#x3a;m&#106;&#108;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;a&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;m">m&#106;&#108;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;a&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1469,7 +1469,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m">&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;r&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;r&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
