--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#99;&#111;m">&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;&#111;&#x2e;&#99;&#111;m</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x73;&#117;&#x70;p&#x6f;&#x72;&#x74;&#64;&#118;i&#x76;&#x61;&#x72;a&#x64;&#x6f;&#x2e;c&#111;&#x6d;">&#x73;&#117;&#x70;p&#x6f;&#x72;&#x74;&#64;&#118;i&#x76;&#x61;&#x72;a&#x64;&#x6f;&#x2e;c&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;l&#x74;&#x6f;&#x3a;m&#106;&#108;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;a&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;m">m&#106;&#108;&#97;&#103;&#x61;&#x74;&#116;&#117;&#x74;a&#x40;&#x67;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;m</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;il&#116;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#97;&#x40;&#103;m&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#97;&#x40;&#103;m&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -974,7 +974,7 @@
 
 <p>An example of what we are planning in terms of the new Black MO (Original Master) and new Wide MO. The wide version is planned to be <strong>20% Wider</strong> compared to the current normal and the black version is planned to be <strong>60% Bolder</strong> compared to the current bold.</p>
 
-<p><img src="assets/media/adv_nm_wd_bld_blk.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
+<p><img src="assets/media/adv_mo_mg.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
 
 <p>image: #002, 0.001, svg, Advent bold-black and normal wide.</p>
 
@@ -1469,7 +1469,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;r&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;">&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#97;r&#x61;&#x64;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
+<li><a href="m&#x61;&#105;&#x6c;&#116;o&#58;&#x73;&#117;&#x70;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;a&#x72;&#x61;&#100;&#111;&#x2e;c&#111;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;a&#x72;&#x61;&#100;&#111;&#x2e;c&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
