master mo and mg table

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x73;&#117;&#x70;p&#x6f;&#x72;&#x74;&#64;&#118;i&#x76;&#x61;&#x72;a&#x64;&#x6f;&#x2e;c&#111;&#x6d;">&#x73;&#117;&#x70;p&#x6f;&#x72;&#x74;&#64;&#118;i&#x76;&#x61;&#x72;a&#x64;&#x6f;&#x2e;c&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;:&#x73;&#x75;&#112;&#112;&#111;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#x75;&#112;&#112;&#111;&#x72;&#116;&#x40;&#118;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;il&#116;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#97;&#x40;&#103;m&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;">&#109;&#x6a;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#97;&#x40;&#103;m&#97;&#x69;&#108;.&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#x6c;&#116;o&#x3a;m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;c&#111;&#x6d;">m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;c&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -546,7 +546,7 @@
 
 <p><img src="assets/media/advent_masters_sankey.svg" alt="Masters and Instances" /></p>
 
-<p>image: #001, 0.001, svg, Advent Masters and Instances sankey.</p>
+<p>image: #001, 0.002, svg, Advent Masters and Instances sankey.</p>
 
 <hr />
 
@@ -976,7 +976,7 @@
 
 <p><img src="assets/media/adv_mo_mg.svg" alt="adv<em>nrm</em>wde<em>bld</em>blk" /></p>
 
-<p>image: #002, 0.001, svg, Advent bold-black and normal wide.</p>
+<p>image: #002, 0.002, svg, Advent MO and MG Masters.</p>
 
 <hr />
 
@@ -1469,7 +1469,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#105;&#x6c;&#116;o&#58;&#x73;&#117;&#x70;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;a&#x72;&#x61;&#100;&#111;&#x2e;c&#111;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#114;t&#x40;&#x76;&#x69;&#118;a&#x72;&#x61;&#100;&#111;&#x2e;c&#111;&#109;</a></li>
+<li><a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;v&#97;&#114;&#97;d&#x6f;.&#99;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;&#x72;&#116;&#64;&#x76;&#x69;v&#97;&#114;&#97;d&#x6f;.&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
