schedule update segmented

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;i&#108;&#116;&#111;&#x3a;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;&#x72;a&#100;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#x69;&#118;&#97;&#x72;a&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#x61;d&#x6f;&#46;&#99;&#111;m">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#x61;d&#x6f;&#46;&#99;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;j&#108;&#97;g&#x61;&#x74;&#116;&#x75;&#x74;&#97;&#64;g&#109;&#x61;&#x69;l&#46;&#x63;&#111;&#109;">&#109;j&#108;&#97;g&#x61;&#x74;&#116;&#x75;&#x74;&#97;&#64;g&#109;&#x61;&#x69;l&#46;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;&#x75;t&#x61;&#x40;&#x67;m&#97;&#x69;&#108;&#46;&#x63;&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;&#x75;t&#x61;&#x40;&#x67;m&#97;&#x69;&#108;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1349,40 +1349,40 @@ ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28
 section Advent 3 SE Cyrillic
 
 ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 12d
-    ADV-0003-0008-0001-0001 Advent SeC WO:                         active, des30, 2019-04-27, 9d
-        SeC WO 1:                                                  active, des39, 2019-04-27, 3d
-            WO Capital:                                              done, des31, 2019-04-27, 5h
-        3 SeC WO 2:                                                        des40, after des39, 3d
-        3 SeC WO 3:                                                        des41, after des40, 3d
+    ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27, 9d
+        SeC MO 1 (04/27 to 04/30):                                 active, des39, 2019-04-27, 3d
+            MO Capital:                                              done, des31, 2019-04-27, 5h
+        3 SeC MO 2 (04/30 to 05/03):                                       des40, after des39, 3d
+        3 SeC MO 3:                                                        des41, after des40, 3d
 
-    ADV-0003-0008-0001-0001 SeC WG:                                        des32, after des30, 3d
-        3 SeC WG 1:                                                        des42, after des30, 1d
-        3 SeC WG 2:                                                        des43, after des42, 1d
-        3 SeC WG 3:                                                        des44, after des43, 1d
+    ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des30, 3d
+        3 SeC MG 1:                                                        des42, after des30, 1d
+        3 SeC MG 2:                                                        des43, after des42, 1d
+        3 SeC MG 3:                                                        des44, after des43, 1d
 #
 section 4 ME Latin and Greek
 
 ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33, after des32, 10d
-    ADV-0004-0007-0001 MeL WO:                                             des34, after des32, 3d
-        4 MeL WO 1:                                                        des45, after des32, 1d
-        4 MeL WO 1:                                                        des46, after des45, 1d
-        4 MeL WO 1:                                                        des47, after des46, 1d
-    ADV-0004-0007-0001 MeL WG:                                             des35, after des34, 7d
-        4 MeL WG 1:                                                        des48, after des34, 3d
-        4 MeL WG 2:                                                        des49, after des48, 3d
-        4 MeL WG 3:                                                        des50, after des49, 1d
+    ADV-0004-0007-0001 MeL MO:                                             des34, after des32, 3d
+        4 MeL MO 1:                                                        des45, after des32, 1d
+        4 MeL MO 1:                                                        des46, after des45, 1d
+        4 MeL MO 1:                                                        des47, after des46, 1d
+    ADV-0004-0007-0001 MeL MG:                                             des35, after des34, 7d
+        4 MeL MG 1:                                                        des48, after des34, 3d
+        4 MeL MG 2:                                                        des49, after des48, 3d
+        4 MeL MG 3:                                                        des50, after des49, 1d
 #
 section 4 SE Cyrillic
 
 ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36, after des35, 10d
-    ADV-0004-0008-0001 SeC WO:                                             des37, after des35, 3d
-        4 SeC WO 1:                                                        des51, after des35, 1d
-        4 SeC WO 2:                                                        des52, after des51, 1d
-        4 SeC WO 3:                                                        des53, after des52, 1d
-    ADV-0004-0008-0001 SeC WG:                                             des38, after des37, 7d
-        4 SeC WG 1:                                                        des54, after des37, 3d
-        4 SeC WG 2:                                                        des55, after des54, 3d
-        4 SeC WG 3:                                                        des56, after des55, 1d
+    ADV-0004-0008-0001 SeC MO:                                             des37, after des35, 3d
+        4 SeC MO 1:                                                        des51, after des35, 1d
+        4 SeC MO 2:                                                        des52, after des51, 1d
+        4 SeC MO 3:                                                        des53, after des52, 1d
+    ADV-0004-0008-0001 SeC MG:                                             des38, after des37, 7d
+        4 SeC MG 1:                                                        des54, after des37, 3d
+        4 SeC MG 2:                                                        des55, after des54, 3d
+        4 SeC MG 3:                                                        des56, after des55, 1d
 </code></pre>
 
 <ul>
@@ -1473,8 +1473,8 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 <ul>
 <li>ADV-∞-0008-0001: Cyrillic Script Extension (SeC)
 <ul>
-<li>ADV-∞-0008-0001-0001: SeC Capitals WO and WG</li>
-<li>ADV-∞-0008-0001-0002: SeC SmallCase WO and WG</li>
+<li>ADV-∞-0008-0001-0001: SeC Capitals MO and MG</li>
+<li>ADV-∞-0008-0001-0002: SeC SmallCase MO and MG</li>
 </ul></li>
 <li>ADV-∞-0008-0001: Cyrillic Script Extension (SeC)</li>
 </ul></li>
@@ -1493,8 +1493,8 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 <ul>
 <li>ADV-0003-0008-0001: Cyrillic Script Extension (SeC)
 <ul>
-<li>ADV-0003-0008-0001-0001: SeC Capitals WO and WG</li>
-<li>ADV-0003-0008-0001-0002: SeC SmallCase WO and WG</li>
+<li>ADV-0003-0008-0001-0001: SeC Capitals MO and MG</li>
+<li>ADV-0003-0008-0001-0002: SeC SmallCase MO and MG</li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -1515,8 +1515,8 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 <ul>
 <li>ADV-0004-0008-0001: Cyrillic Script Extension (SeC)
 <ul>
-<li>ADV-0004-0008-0001-0001: SeC Capitals WO and WG</li>
-<li>ADV-0004-0008-0001-0002: SeC SmallCase WO and WG</li>
+<li>ADV-0004-0008-0001-0001: SeC Capitals MO and MG</li>
+<li>ADV-0004-0008-0001-0002: SeC SmallCase MO and MG</li>
 </ul></li>
 <li>ADV-0004-0008-0001: Cyrillic Script Extension (SeC)</li>
 </ul></li>
@@ -1608,7 +1608,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#58;&#x73;&#117;&#112;&#x70;&#x6f;r&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#x6f;r&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;a&#105;&#x6c;t&#111;&#x3a;s&#x75;p&#112;&#111;&#114;&#x74;&#64;v&#105;&#x76;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#x6f;&#x6d;">s&#x75;p&#112;&#111;&#114;&#x74;&#64;v&#105;&#x76;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
