--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#x61;d&#x6f;&#46;&#99;&#111;m">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#x61;d&#x6f;&#46;&#99;&#111;m</a></li>
+<li>VivaRado <a href="m&#x61;i&#108;&#x74;&#111;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;">&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;&#x75;t&#x61;&#x40;&#x67;m&#97;&#x69;&#108;&#46;&#x63;&#111;&#x6d;">&#x6d;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;&#x75;t&#x61;&#x40;&#x67;m&#97;&#x69;&#108;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;g&#109;&#97;&#x69;&#108;&#46;&#99;&#111;m">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;g&#109;&#97;&#x69;&#108;&#46;&#99;&#111;m</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1350,15 +1350,15 @@ section Advent 3 SE Cyrillic
 
 ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 12d
     ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27, 9d
-        SeC MO 1 (04/27 to 04/30):                                 active, des39, 2019-04-27, 3d
+        SeC MO 1 reg (04/27 to 04/30):                             active, des39, 2019-04-27, 3d
             MO Capital:                                              done, des31, 2019-04-27, 5h
-        3 SeC MO 2 (04/30 to 05/03):                                       des40, after des39, 3d
-        3 SeC MO 3:                                                        des41, after des40, 3d
+        3 SeC MO 2 thn (04/30 to 05/03):                                   des40, after des39, 3d
+        3 SeC MO 3 bld:                                                    des41, after des40, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des30, 3d
-        3 SeC MG 1:                                                        des42, after des30, 1d
-        3 SeC MG 2:                                                        des43, after des42, 1d
-        3 SeC MG 3:                                                        des44, after des43, 1d
+        3 SeC MG 1 reg_it:                                                 des42, after des30, 1d
+        3 SeC MG 2 thn_it:                                                 des43, after des42, 1d
+        3 SeC MG 3 bld_it:                                                 des44, after des43, 1d
 #
 section 4 ME Latin and Greek
 
@@ -1608,7 +1608,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;a&#105;&#x6c;t&#111;&#x3a;s&#x75;p&#112;&#111;&#114;&#x74;&#64;v&#105;&#x76;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#x6f;&#x6d;">s&#x75;p&#112;&#111;&#114;&#x74;&#64;v&#105;&#x76;&#x61;&#x72;&#x61;d&#x6f;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;">&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
