--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#x61;i&#108;&#x74;&#111;&#x3a;&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;">&#115;&#117;&#x70;&#112;&#111;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;.&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#108;t&#x6f;&#58;&#115;&#x75;pp&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;">&#115;&#x75;pp&#x6f;&#114;&#116;&#64;&#118;i&#118;&#97;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;g&#109;&#97;&#x69;&#108;&#46;&#99;&#111;m">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;g&#109;&#97;&#x69;&#108;&#46;&#99;&#111;m</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;c&#111;&#x6d;">&#109;&#x6a;&#x6c;&#97;&#x67;&#x61;&#116;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;&#108;&#46;c&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1351,7 +1351,9 @@ section Advent 3 SE Cyrillic
 ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 12d
     ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27, 9d
         SeC MO 1 reg (04/27 to 04/30):                             active, des39, 2019-04-27, 3d
-            MO Capital:                                              done, des31, 2019-04-27, 5h
+            MO reg Capital:                                              done, des31, 2019-04-27, 5h
+            MO reg Capital 39/39:                                        done, des31, 2019-04-28, 5h
+            MO reg SmallCase 9/45:                                       done, des31, 2019-04-28, 1h
         3 SeC MO 2 thn (04/30 to 05/03):                                   des40, after des39, 3d
         3 SeC MO 3 bld:                                                    des41, after des40, 3d
 
@@ -1608,7 +1610,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;">&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#x76;i&#x76;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m">&#115;&#x75;&#112;&#x70;&#111;&#x72;&#116;&#64;&#x76;i&#x76;&#x61;&#114;&#x61;&#x64;&#111;&#x2e;c&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
