--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;i&#108;&#116;&#x6f;&#x3a;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#x69;&#x76;&#97;&#114;a&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#58;&#115;&#x75;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#116;&#111;&#58;&#109;&#x6a;&#108;&#97;&#x67;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;">&#109;&#x6a;&#108;&#97;&#x67;&#97;&#116;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#105;&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;c&#x6f;&#109;">&#109;&#x6a;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;c&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1371,10 +1371,10 @@ ADV-0004-0007-0001 4 ME Latin and ME Greek:                          crit, des33
         4 MeL MO 3 bld:                                                    des47, after des46, 1d
         4 MeL MO 4 blk:                                                    des57, after des47, 1d
     ADV-0004-0007-0001 MeL MG:                                             des35, after des34, 8d
-        4 MeL MG 1 reg:                                                    des48, after des34, 2d
-        4 MeL MG 2 thn:                                                    des49, after des48, 2d
-        4 MeL MG 3 bld:                                                    des50, after des49, 2d
-        4 MeL MG 4 blk:                                                    des51, after des50, 2d
+        4 MeL MG 1 reg_it, reg_wd_it:                                      des48, after des34, 2d
+        4 MeL MG 2 thn_it, thn_wd_it:                                      des49, after des48, 2d
+        4 MeL MG 3 bld_it, bld_wd_it:                                      des50, after des49, 2d
+        4 MeL MG 4 blk_it, blk_wd_it:                                      des51, after des50, 2d
 #
 section 4 SE Cyrillic
 
@@ -1385,10 +1385,10 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
         4 SeC MO bld 3:                                                    des53, after des52, 1d
         4 SeC MO blk 4:                                                    des60, after des53, 1d
     ADV-0004-0008-0001 SeC MG:                                             des38, after des37, 8d
-        4 SeC MG reg 1:                                                    des54, after des37, 2d
-        4 SeC MG thn 2:                                                    des55, after des54, 2d
-        4 SeC MG bld 3:                                                    des56, after des55, 2d
-        4 SeC MG blk 4:                                                    des61, after des56, 2d
+        4 SeC MG reg_it 1, reg_wd_it:                                      des54, after des37, 2d
+        4 SeC MG thn_it 2, thn_wd_it:                                      des55, after des54, 2d
+        4 SeC MG bld_it 3, bld_wd_it:                                      des56, after des55, 2d
+        4 SeC MG blk_it 4, blk_wd_it:                                      des61, after des56, 2d
 </code></pre>
 
 <ul>
@@ -1614,7 +1614,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#108;&#x74;o&#x3a;s&#117;&#112;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#97;d&#x6f;&#x2e;&#99;&#111;&#x6d;">s&#117;&#112;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;&#x69;&#118;&#x61;&#114;&#97;d&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x73;&#117;p&#x70;&#111;&#114;t&#64;&#x76;&#x69;v&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#x73;&#117;p&#x70;&#111;&#114;t&#64;&#x76;&#x69;v&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
