--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.008 | 2019/04/28</title>
+		<title>VRD | Advent | 3.008 | 2019/04/29</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#58;&#115;&#x75;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#112;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#97;&#x64;&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#58;&#115;&#x75;&#112;&#112;&#111;&#x72;t&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;d&#111;&#x2e;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#112;&#111;&#x72;t&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;d&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#105;&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;c&#x6f;&#109;">&#109;&#x6a;&#x6c;&#x61;&#x67;a&#116;&#116;&#117;&#116;&#x61;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;c&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;u&#116;&#x61;&#64;&#103;&#x6d;&#97;i&#x6c;&#x2e;&#99;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;u&#116;&#x61;&#64;&#103;&#x6d;&#97;i&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1354,6 +1354,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg Capital:                                          done, des31, 2019-04-27, 5h
             MO reg Capital 39/39:                                    done, des31, 2019-04-28, 5h
             MO reg SmallCase 9/45:                                   done, des31, 2019-04-28, 1h
+            MO reg SmallCase 45/45:                                  done, des62, 2019-04-29, 4h
         3 SeC MO 2 thn (04/30 to 05/03):                                   des40, after des39, 3d
         3 SeC MO 3 bld:                                                    des41, after des40, 3d
 
@@ -1543,6 +1544,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 <li>April 01 2019: Initiation of planning for Advent 4.</li>
 <li>April 14 2019: Standalone repo for autokern in python3 and 2.</li>
 <li>April 27 2019: Plan for delivery of Advent 4</li>
+<li>April 29 2019: ADV-0003-0008-0001-0001 SeC MO 1 reg</li>
 </ul>
 
 <hr />
@@ -1614,7 +1616,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x73;&#117;p&#x70;&#111;&#114;t&#64;&#x76;&#x69;v&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#x73;&#117;p&#x70;&#111;&#114;t&#64;&#x76;&#x69;v&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
+<li><a href="&#x6d;&#97;&#105;l&#x74;&#111;&#58;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#97;d&#111;.&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#97;d&#111;.&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
