ADV-0003-0008-0001-0001 SeC MO 1 reg - schedule update

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#58;&#115;&#x75;&#112;&#112;&#111;&#x72;t&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;d&#111;&#x2e;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#112;&#111;&#x72;t&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;d&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#116;o&#x3a;s&#x75;&#x70;&#112;&#x6f;r&#x74;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;d&#111;&#46;&#x63;&#x6f;&#109;">s&#x75;&#x70;&#112;&#x6f;r&#x74;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;d&#111;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#109;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;u&#116;&#x61;&#64;&#103;&#x6d;&#97;i&#x6c;&#x2e;&#99;&#x6f;&#109;">&#109;&#x6a;&#x6c;&#97;&#103;&#97;&#x74;&#x74;u&#116;&#x61;&#64;&#103;&#x6d;&#97;i&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;i&#x6c;&#x74;&#111;&#x3a;&#109;&#106;&#108;&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#x6d;">&#109;&#106;&#108;&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#116;&#x61;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1350,7 +1350,7 @@ section Advent 3 SE Cyrillic
 
 ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 12d
     ADV-0003-0008-0001-0001 Advent SeC MO:                         active, des30, 2019-04-27, 9d
-        SeC MO 1 reg (04/27 to 04/30):                             active, des39, 2019-04-27, 3d
+        SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27, 3d
             MO reg Capital:                                          done, des31, 2019-04-27, 5h
             MO reg Capital 39/39:                                    done, des31, 2019-04-28, 5h
             MO reg SmallCase 9/45:                                   done, des31, 2019-04-28, 1h
@@ -1616,7 +1616,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;l&#x74;&#111;&#58;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#97;d&#111;.&#x63;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#x72;&#97;d&#111;.&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;a&#x69;&#x6c;&#116;&#111;&#x3a;&#x73;&#117;&#112;&#112;&#111;&#114;t&#64;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;.c&#x6f;&#x6d;">&#x73;&#117;&#112;&#112;&#111;&#114;t&#64;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;.c&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
