--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;l&#116;&#111;:&#x73;u&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;v&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;">&#x73;u&#112;&#112;&#x6f;&#114;t&#64;&#x76;&#105;v&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x73;&#x75;&#x70;&#112;o&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#109;">&#x73;&#x75;&#x70;&#112;o&#114;&#x74;&#64;&#x76;&#x69;&#118;&#97;&#114;&#x61;&#x64;&#111;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;&#108;&#97;&#x67;a&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;">&#109;&#x6a;&#108;&#97;&#x67;a&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#58;&#109;&#106;l&#97;&#x67;&#x61;&#x74;&#116;&#117;&#116;a&#64;&#103;&#x6d;&#x61;&#x69;l&#x2e;&#99;&#111;&#109;">&#109;&#106;l&#97;&#x67;&#x61;&#x74;&#116;&#117;&#116;a&#64;&#103;&#x6d;&#x61;&#x69;l&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1355,7 +1355,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg Capital 39/39:                                    done, des31, 2019-04-28, 5h
             MO reg SmallCase 9/45:                                   done, des31, 2019-04-28, 1h
             MO reg SmallCase 45/45:                                  done, des62, 2019-04-29, 4h
-        3 SeC MO 2 thn (04/30 to 05/03):                                   des40, after des39, 3d
+        3 SeC MO 2 thn (04/30 to 05/03):                           active, des40, after des39, 3d
             MO reg Capital 15/39, SmallCase 17/45:                   done, des63, 2019-05-01, 4h
             MO reg Capital 27/39, SmallCase 21/45:                         des64, 2019-05-02, 4h
             MO reg Capital 39/39, SmallCase 45/45:                         des64, 2019-05-03, 4h
@@ -1619,7 +1619,7 @@ ADV-0004-0008-0001 4 SE Cyrillic:                                    crit, des36
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;l&#116;&#x6f;&#58;&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;d&#111;&#46;&#x63;&#111;&#109;">&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#118;&#105;&#x76;&#x61;&#114;&#97;d&#111;&#46;&#x63;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#108;&#116;o&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
